--- a/NZWalks.API/NZWalks.API/appsettings.json
+++ b/NZWalks.API/NZWalks.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "NZWalks": "Server=DESKTOP-FHS3ONU\\SQLEXPRESS;Database=NZWalksDb;Trusted_Connection=true;TrustServerCertificate=True"
+  }
 }
