--- a/NZWalks.API/NZWalks.API/appsettings.json
+++ b/NZWalks.API/NZWalks.API/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "NZWalks": "Server=DESKTOP-FHS3ONU\\SQLEXPRESS;Database=NZWalksDb;Trusted_Connection=true;TrustServerCertificate=True"
+  },
+  "Jwt": {
+    "Key": "dwC78t23y9QiuhnTP9wwnf70njklsdguTIWoi39uie0M",
+    "Issuer": "https://localhost:7016/",
+    "Audience": "https://localhost:7016/"
   }
 }
